geo-aeo-17: add manual action items
